--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -2676,8 +2676,9 @@ function addInfoText(text) {
         \end{multicols}
 
         % Calculate the max height of a line
-        \def\lineHeight{\dimexpr (250 pt)/\boardCharsH \relax}
-        \def\lineWidth{\dimexpr (250 pt) \relax}
+
+        \def\lineHeight{\dimexpr (0.2955\paperheight)/\boardCharsH \relax}
+        \def\lineWidth{\dimexpr (0.2955\paperheight) \relax}
 
         \begin{multicols}{2}
 
