--- a/src/chess.tex
+++ b/src/chess.tex
@@ -1301,7 +1301,7 @@ function printInfoText(text) {
         \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
         \FPeval{\resultH}{\boardHeight * 3 + 3}
-        \def\cellHeight{\dimexpr (500 pt -\resultH pt)/\boardHeight \relax}
+        \def\cellHeight{\dimexpr (0.591\paperheight -\resultH pt)/\boardHeight \relax}
 
         % The game board
         \begin{tcolorbox}
