--- a/src/match-three.tex
+++ b/src/match-three.tex
@@ -1100,7 +1100,8 @@ function printInfoText(text) {
         \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
         \FPeval{\resultH}{\boardHeight * 3 + 3}
-        \def\cellHeight{\dimexpr (400 pt -\resultH pt)/\boardHeight \relax}
+        % 0.473 * 845 = 400pt
+        \def\cellHeight{\dimexpr (0.473\paperheight -\resultH pt)/\boardHeight \relax}
 
         % The game board
         \begin{tcolorbox}
