--- a/src/sudoku.tex
+++ b/src/sudoku.tex
@@ -726,7 +726,7 @@ function printInfoText(text) {
         \def\cellWidth{\dimexpr (\linewidth-\resultW pt)/\boardWidth \relax}
 
         \FPeval{\resultH}{\boardHeight * 3 + 3}
-        \def\cellHeight{\dimexpr (500 pt -\resultH pt)/\boardHeight \relax}
+        \def\cellHeight{\dimexpr (0.591\paperheight -\resultH pt)/\boardHeight \relax}
 
         % Playing board
         \begin{tcolorbox}
